# OOP-LAB-5

./: CMakeLists.txt  array.h  custom_memory.h  main.cpp  test.cpp
